--- a/QRScanner/app/src/main/res/values/strings.xml
+++ b/QRScanner/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">QR Code Reader</string>
-    <string name="request_camera_permission">Need to access the camera for scanning</string>
+    <string name="request_camera_permission">Need to access camera for scanning</string>
     <string name="no_camera_permission">This application cannot run because it does not have the camera permission. The application will now exit.</string>
     <string name="low_storage_error">QR code reading dependencies cannot be downloaded due to low device storage</string>
     <string name="unknown_download_error">QR code reading dependencies cannot be downloaded due to unknown reason</string>
