--- a/QRScanner/app/src/main/res/values/strings.xml
+++ b/QRScanner/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="no_camera_permission">This application cannot run because it does not have the camera permission. The application will now exit.</string>
     <string name="low_storage_error">QR code reading dependencies cannot be downloaded due to low device storage</string>
     <string name="unknown_download_error">QR code reading dependencies cannot be downloaded due to unknown reason</string>
+    <string name="clear_history_confirmation">Are you sure you want to clear scan history?</string>
+    <string name="empty_scan_history">Scan history is already empty</string>
 </resources>
