--- a/QRScanner/app/src/main/res/values/strings.xml
+++ b/QRScanner/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="empty_scan_history">Scan history is already empty</string>
     <string name="confirm_copy_to_clipboard">Copied to clipboard</string>
     <string name="scan_guide">Place a QR code inside this view to scan</string>
+    <string name="confirm_clear_scan_history">Scan history has been cleared</string>
+    <string name="confirm_result_delete">Item deleted</string>
 </resources>
