--- a/QRScanner/app/src/main/res/values/strings.xml
+++ b/QRScanner/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="low_storage_error">QR code reading dependencies cannot be downloaded due to low device storage</string>
     <string name="unknown_download_error">QR code reading dependencies cannot be downloaded due to unknown reason</string>
     <string name="clear_history_confirmation">Are you sure you want to clear scan history?</string>
-    <string name="empty_scan_history">Scan history is already empty</string>
+    <string name="empty_scan_history">Scan history is empty</string>
     <string name="confirm_copy_to_clipboard">Copied to clipboard</string>
     <string name="scan_guide">Place a QR code inside this view to scan</string>
     <string name="confirm_clear_scan_history">Scan history has been cleared</string>
@@ -13,4 +13,5 @@
     <string name="invalid_url">Invalid URL, Try web search instead</string>
     <string name="dependencies_not_found">Google Play Services will download required files in the background. This is a one time process.
         Please make sure to connect to the internet and try again in a couple of minutes.</string>
+    <string name="delete_guide">Swipe to delete items</string>
 </resources>
