--- a/QRScanner/app/src/main/res/values/strings.xml
+++ b/QRScanner/app/src/main/res/values/strings.xml
@@ -14,4 +14,8 @@
     <string name="dependencies_not_found">Google Play Services will download required files in the background. This is a one time process.
         Please make sure to connect to the internet and try again in a couple of minutes.</string>
     <string name="delete_guide">Swipe to delete items</string>
+    <string name="action_web">Open in browser</string>
+    <string name="action_phone">Open in dialer</string>
+    <string name="action_geo">Open in maps</string>
+    <string name="action_calender">Add to calender</string>
 </resources>
