Three dot menu for scan history elements

--- a/QRScanner/app/src/main/res/values/strings.xml
+++ b/QRScanner/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="action_phone">Open in dialer</string>
     <string name="action_geo">Open in maps</string>
     <string name="action_calender">Add to calender</string>
+    <string name="action_copy">Copy to clipboard</string>
+    <string name="action_web_search">Web search</string>
 </resources>
