--- a/QRScanner/app/src/main/res/values/strings.xml
+++ b/QRScanner/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="action_copy">Copy to clipboard</string>
     <string name="action_web_search">Web search</string>
     <string name="action_contact">Add to contacts</string>
+    <string name="view_more">More details</string>
 </resources>
