--- a/QRScanner/app/src/main/res/values/strings.xml
+++ b/QRScanner/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="pref_key_minimum_barcode_width" translatable="false">barcode_mbw</string>
     <string name="pref_key_delay_loading_barcode_result" translatable="false">barcode_dlbr</string>
     <string name="pref_key_open_directly_in_browser">open_browser</string>
+    <string name="pref_key_play_audio_beep">audio_beep</string>
 </resources>
