--- a/QRScanner/app/src/main/res/values/strings.xml
+++ b/QRScanner/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="action_copy">Copy to clipboard</string>
     <string name="action_web_search">Web search</string>
     <string name="action_contact">Add to contacts</string>
+    <string name="action_wifi">Connect</string>
     <string name="view_more">More details</string>
     <string name="flasher_fail">Failed to turn on flasher</string>
     <string name="clearall">Clear All</string>
@@ -34,4 +35,5 @@
     <string name="pref_key_delay_loading_barcode_result" translatable="false">barcode_dlbr</string>
     <string name="pref_key_open_directly_in_browser">open_browser</string>
     <string name="pref_key_play_audio_beep">audio_beep</string>
+    <string name="unsupported_encryption">WiFi encryption is not supported</string>
 </resources>
