--- a/QRScanner/app/src/main/res/values/strings.xml
+++ b/QRScanner/app/src/main/res/values/strings.xml
@@ -24,6 +24,8 @@
     <string name="cd_settings_button">Settings</string>
     <string name="cd_flash_button">Toggle camera flash</string>
     <string name="cd_history_button">Scan history</string>
+    <string name="cd_gallery_button">Open gallery</string>
+    <string name="cd_close_button">Back</string>
     <string name="prompt_point_at_a_barcode">Point your camera at a barcode</string>
     <string name="pref_key_rear_camera_preview_size" translatable="false">rcpvs</string>
     <string name="pref_key_rear_camera_picture_size" translatable="false">rcpts</string>
@@ -32,6 +34,13 @@
     <string name="pref_key_open_directly_in_browser">open_browser</string>
     <string name="pref_key_play_audio_beep">audio_beep</string>
     <string name="unsupported_encryption">WiFi encryption is not supported</string>
+    <string name="wait_for_decode">Scanning..</string>
+    <string name="static_image_card_no_result_title">No result found</string>
+
+    <plurals name="bottom_sheet_title">
+        <item quantity="one">%d barcode detected</item>
+        <item quantity="other">%d barcodes detected</item>
+    </plurals>
 
     <string name="rate_dialog_title">Rate QR Code Reader</string>
     <string name="rate_dialog_message">If you love this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Your valuable feedback is much appreciated!</string>
