--- a/QRScanner/app/src/main/res/values/strings.xml
+++ b/QRScanner/app/src/main/res/values/strings.xml
@@ -27,8 +27,7 @@
     <string name="cd_gallery_button">Open gallery</string>
     <string name="cd_close_button">Back</string>
     <string name="prompt_point_at_a_barcode">Align a barcode to the center</string>
-    <string name="pref_key_barcode_reticle_width" translatable="false">barcode_brw</string>
-    <string name="pref_key_barcode_reticle_height" translatable="false">barcode_brh</string>
+    <string name="pref_key_crop_percentage" translatable="false">crop_percentage</string>
     <string name="pref_key_open_browser" translatable="false">open_browser</string>
     <string name="pref_key_play_audio_beep" translatable="false">audio_beep</string>
     <string name="unsupported_encryption">WiFi encryption is not supported</string>
